--- a/dist.ini
+++ b/dist.ini
@@ -10,8 +10,11 @@ copyright_holder=Steven Haryanto
 
 [Prereqs]
 perl=5.010001
+Config::INI::Reader=0
 ;!lint-prereqs assume-used # blanket statement unrecognized
 Dist::Zilla=0
+Path::Class=0
+String::Formatter=0
 
 [Extras / lint-prereqs / assume-provided]
 ; by depending on dzil
