--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ version=0.03
 
 name=Dist-Zilla-Plugin-PERLANCAR-MetaResources
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs]
