[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,7 @@ name=Dist-Zilla-Plugin-PERLANCAR-MetaResources
 [Prereqs]
 perl=5.010001
 Config::INI::Reader=0
-;!lint-prereqs assume-used # blanket statement unrecognized
+;!lint_prereqs assume-used # blanket statement unrecognized
 Dist::Zilla=0
 Path::Class=0
 String::Formatter=0
