--- a/dist.ini
+++ b/dist.ini
@@ -7,14 +7,13 @@ name=Dist-Zilla-Plugin-PERLANCAR-MetaResources
 
 [Prereqs]
 perl=5.010001
-Config::INI::Reader=0
-;!lint_prereqs assume-used # blanket statement unrecognized
-Dist::Zilla=0
-Path::Class=0
-String::Formatter=0
 
-[Extras / lint-prereqs / assume-provided]
-; by depending on dzil
+namespace::autoclean=0
+strict=0
+warnings=0
+
+Config::INI::Reader=0
 Dist::Zilla::Plugin::MetaResources=0
 Moose=0
-namespace::autoclean=0
+Path::Class=0
+String::Formatter=0
